--- a/pressure/index.html
+++ b/pressure/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="circle"></div>
+    <div id="target"></div>
 </body>
 </html>
